config/iptables-under-work/iptables-ip4
*filter

# Accept anything from the loopback adress (127.0.0.1)
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# Support Pinging
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT
-A OUTPUT -p icmp --icmp-type echo-reply -j ACCEPT
-A OUTPUT -p icmp --icmp-type echo-request -j ACCEPT
-A INPUT -p icmp --icmp-type echo-reply -j ACCEPT

# Surf Da Web (HTTP & HTTPS)
-I INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-I OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-I OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-I INPUT -p tcp -m tcp --dport 443 -j ACCEPT


# Accept DNS cause that's basic stuff
-A INPUT -i eth0 -s 192.168.1.0/24 -p udp --dport 53 -j ACCEPT
-A INPUT -i eth0 -s 192.168.1.0/24 -p tcp --dport 53 -j ACCEPT

# Time update support with NTP
-A INPUT -i eth0 -p udp -m state --state ESTABLISHED,RELATED --dport 123 -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --sport 123 -j ACCEPT

# MPD support, why the fuck it need a port mate??
-I INPUT -p tcp --dport 6600 -j ACCEPT
-I OUTPUT -p tcp --sport 6600 -j ACCEPT

# Some more stuff
-I INPUT -p tcp --dport 53 -j ACCEPT
-I INPUT -p tcp --dport 43 -j ACCEPT
-I OUTPUT -p tcp --sport 53 -j ACCEPT
-I OUTPUT -p tcp --sport 43 -j ACCEPT

# Priting Support (CUPS)
-A INPUT -p udp -m udp --dport 631 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 631 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 631 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 631 -j ACCEPT

# Email Support

-A INPUT -i eth0 -p tcp -m state --state ESTABLISHED,RELATED --sport 993 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state ESTABLISHED,RELATED --sport 995 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --dport 995 -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state ESTABLISHED,RELATED --sport 465 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --dport 465 -j ACCEPT

# SSH Support
-A INPUT -i ens3 -p tcp -m state --state NEW,ESTABLISHED --dport 22 -j ACCEPT
-A OUTPUT -o ens3 -p tcp -m state --state ESTABLISHED --sport 22 -j ACCEPT
-A OUTPUT -o ens3 -p tcp -m state --state NEW,ESTABLISHED --dport 22 -j ACCEPT
-A INPUT -i ens3 -p tcp -m state --state ESTABLISHED --sport 22 -j ACCEPT

# DHCP
-A INPUT -i eth0 -p udp -m state --state ESTABLISHED,RELATED --sport 67:68 -j ACCEPT
-A OUTPUT -o eth0 -p udp -m udp --dport 67:68 -j ACCEPT

# Reject anything else, we are done OwO
-A INPUT -j REJECT
-A FORWARD -j REJECT
-A OUTPUT -j REJECT

COMMIT
